@@ -65,3 +65,4 @@ let uppercase c =
 type t = char
 
 let compare c1 c2 = code c1 - code c2
+let equal (c1: t) (c2: t) = compare c1 c2 = 0
