@@ -55,3 +55,4 @@ external float_of_bits : int64 -> float = "caml_int64_float_of_bits"
 type t = int64
 
 let compare (x: t) (y: t) = Pervasives.compare x y
+let equal (x: t) (y: t) = compare x y = 0
