@@ -10,6 +10,7 @@
     val uppercase : char -> char
     type t = char
     val compare : t -> t -> int
+    val equal : t -> t -> bool
     external unsafe_chr : int -> char = "%identity"
   end
 # - : char = 'B'
@@ -22,6 +23,7 @@
     val uppercase : char -> char
     type t = char
     val compare : t -> t -> int
+    val equal : t -> t -> bool
     external unsafe_chr : int -> char = "%identity"
   end
 # - : char = 'B'
@@ -37,6 +39,7 @@
       val uppercase : char -> char
       type t = char
       val compare : t -> t -> int
+      val equal : t -> t -> bool
       external unsafe_chr : int -> char = "%identity"
     end
 # module C4 :
@@ -48,6 +51,7 @@
     val uppercase : char -> char
     type t = char
     val compare : t -> t -> int
+    val equal : t -> t -> bool
     external unsafe_chr : int -> char = "%identity"
   end
 # - : char = 'B'
